syntax = "proto3";
package codern.grading;
import "common.proto"; 

message GetSubmissionsByQuestionIdRequest {
  string userId = 1;
  int32 questionId = 2;
}

message GetSubmissionsByQuestionIdResponse {
  repeated Submission submissions = 1;
}

message SaveCodeRequest {
  string userId = 1;
  int32 questionId = 2;
  string language = 3;
}

message SubmitRequest {
  string userId = 1;
  int32 questionId = 2;
  string language = 3;
}

message SubmitResponse {
  int32 submissionId = 1;
  string filePath = 2;
}

message GradeRequest {
  int32 submissionId = 1;
}

message GradeResponse {
  int32 id = 1;
  int32 questionId = 2;
  string language = 3;
  string filePath = 4;
  uint64 uploadedAt = 5;
}

message GetQuestionSummaryByIdsRequest {
  repeated int32 questionIds = 1;
}

message GetQuestionSummaryByIdsResponse {
  repeated QuestionSummary questionSummaries = 1;
}
