syntax = "proto3";
package codern.grading;

import "grading/entity.proto"; 
import "grading/message.proto"; 

service GradingService {
  rpc GetSubmissions(GetSubmissionsRequest) returns (GetSubmissionsResponse);
  rpc SaveCode(SaveCodeRequest) returns (Empty);
  rpc Submit(SubmitRequest) returns (SubmitResponse);
  rpc Grade(GradeRequest) returns (GradeResponse);
  rpc GetQuestionSummaryByIds(GetQuestionSummaryByIdsRequest) returns (GetQuestionSummaryByIdsResponse);
}
